[package]
name = "dexy"
version = "1.0.0"
edition = "2021"
authors = ["josiah bull <josiah.bull7@gmail.com>"]
description = "A multithreaded recursive file indexer"
readme = "readme.md"
repository = "https://github.com/JosiahBull/dexy"
license = "MIT"
keywords = ["sha256", "index", "json", "multi-threaded", "hash"]
categories = ["command-line-utilities", "command-line-interface", "algorithms"]

[dependencies]
tokio = {version = "1", features = ["full"]}
sha2 = "0.10.2"
serde_json = "1.0.59"
futures = "0.3.21"
indicatif = "0.16.2"