[package]
name = "dexy"
version = "1.1.0"
edition = "2021"
authors = ["josiah bull <josiah.bull7@gmail.com>"]
description = "A multithreaded recursive file indexer"
readme = "readme.md"
repository = "https://github.com/JosiahBull/dexy"
license = "MIT"
keywords = ["sha256", "index", "json", "multi-threaded", "hash"]
categories = ["command-line-utilities", "command-line-interface", "algorithms"]

[dependencies]
tokio = {version = "1", default-features = false, features = ["sync", "macros", "rt-multi-thread", "fs", "time"]}
sha2 = "0.10.2"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.59"
futures = "0.3.21"
regex = "1.5.5"

indicatif = "0.16.2"
clap = { version = "3.1.10", features = ["color", "derive"]}
num_cpus = "1.13.1"

[profile.release]
panic = "abort"